<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="false"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/top_element"
        android:layout_width="1000dp"
        android:layout_height="1000dp"
        android:src="@drawable/ellipse"
        android:rotation="90"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="-600dp"
        android:layout_marginEnd="-600dp" />

    <ImageView
        android:id="@+id/bottom_element"
        android:layout_width="1000dp"
        android:layout_height="1000dp"
        android:src="@drawable/ellipse"
        android:rotation="-90"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="-600dp"
        android:layout_marginStart="-600dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="32dp">

            <ImageView
                android:id="@+id/logo_full"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                android:src="@drawable/logo_stratify2"
                android:minWidth="200dp"
                android:minHeight="100dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/app_logo" />

            <TextView
                android:id="@+id/text_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginStart="32dp"
                android:text="@string/login_title"
                android:textColor="@color/text_yellow"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/logo_full" />

            <TextView
                android:id="@+id/text_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_desc"
                android:textColor="@color/text_grey"
                android:layout_marginTop="2dp"
                android:layout_marginStart="32dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_login" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_input_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginTop="12dp"
                app:boxBackgroundColor="@color/white"
                app:boxCornerRadiusTopStart="12dp"
                app:boxCornerRadiusTopEnd="12dp"
                app:boxCornerRadiusBottomStart="12dp"
                app:boxCornerRadiusBottomEnd="12dp"
                app:boxStrokeColor="@color/text_input_layout_stroke_color"
                app:hintTextColor="@color/text_input_layout_stroke_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_subtitle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_input_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:drawableStart="@drawable/ic_email"
                    android:drawablePadding="8dp"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_input_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:boxBackgroundColor="@color/white"
                app:endIconMode="password_toggle"
                app:boxCornerRadiusTopStart="12dp"
                app:boxCornerRadiusTopEnd="12dp"
                app:boxCornerRadiusBottomStart="12dp"
                app:boxCornerRadiusBottomEnd="12dp"
                app:boxStrokeColor="@color/text_input_layout_stroke_color"
                app:hintTextColor="@color/text_input_layout_stroke_color"
                app:layout_constraintEnd_toEndOf="@id/email_input_layout"
                app:layout_constraintStart_toStartOf="@id/email_input_layout"
                app:layout_constraintTop_toBottomOf="@id/email_input_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_input_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:drawableStart="@drawable/ic_lock"
                    android:drawablePadding="8dp"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/forgot_password_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:textColor="@color/black"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="@id/password_input_layout"
                app:layout_constraintTop_toBottomOf="@id/password_input_layout" />

            <TextView
                android:id="@+id/loginErrorText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="4dp"
                android:textColor="@color/red"
                android:textSize="14sp"
                android:gravity="center"
                android:textAlignment="center"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@id/login_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <Button
                android:id="@+id/login_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/login_button_text"
                android:paddingVertical="12dp"
                android:backgroundTint="@color/button_yellow"
                app:cornerRadius="24dp"
                app:layout_constraintEnd_toEndOf="@id/password_input_layout"
                app:layout_constraintStart_toStartOf="@id/password_input_layout"
                app:layout_constraintTop_toBottomOf="@id/forgot_password_text" />

            <TextView
                android:id="@+id/or_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/or_login_with"
                android:layout_marginTop="24dp"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/login_button" />

            <Button
                android:id="@+id/google_button"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:text="@string/google_button"
                android:textColor="@color/black"
                android:paddingVertical="12dp"
                android:backgroundTint="@color/white"
                app:cornerRadius="24dp"
                app:icon="@drawable/ic_google_scaled"
                app:iconGravity="textStart"
                app:iconPadding="16dp"
                app:iconTint="@null"
                app:layout_constraintTop_toBottomOf="@id/or_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <LinearLayout
                android:id="@+id/signup_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="32dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/google_button"
                app:layout_constraintVertical_bias="1.0">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_account" />

                <TextView
                    android:id="@+id/sign_up_text_link"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/sign_up_link"
                    android:textStyle="bold"
                    android:textColor="@color/maroon_primary" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>